# Lw-Eh

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  library.json
.github/workflows/: ci.yml
Research/: ARCHITECTURE.md  PROGRESS.md  research.md
cmake/: LwEhAggressiveFlags.cmake  LwEhConfig.cmake.in
cmake/toolchains/: arm-cortex-m.cmake  avr.cmake  riscv32-esp.cmake  xtensa-esp32.cmake
examples/: CMakeLists.txt  scenario.hpp
examples/arm_cortex_m_minimal/: CMakeLists.txt  cortex_m.ld  main.cpp  startup.c
examples/avr_minimal/: CMakeLists.txt  main.cpp
examples/esp32_minimal/: CMakeLists.txt  esp32.ld  flash.py  main.cpp  rtc_wdt.hpp  scenario.hpp  startup.S  uart.hpp
examples/riscv32_esp_minimal/: CMakeLists.txt  main.cpp  riscv32.ld  startup.S
include/lweh/: config.hpp  delegate.hpp  intrusive_signal.hpp  lweh.hpp  signal.hpp
include/lweh/detail/: intrusive_core.hpp  signal_core.hpp
integrations/esp-idf/: CMakeLists.txt  idf_component.yml
packaging_check/: CMakeLists.txt  main.cpp
size_audit/: CMakeLists.txt  control_esp32_main.cpp  control_main.cpp  size_report.py  with_lweh_main.cpp
tests/: CMakeLists.txt  attach_detach_test.cpp  capacity_boundary_test.cpp  delegate_test.cpp  dispatch_order_test.cpp  intrusive_signal_test.cpp  multi_event_isolation_test.cpp  reentrancy_test.cpp  test_harness.hpp
